Completed create and update task activity

--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -75,10 +75,10 @@
                 android:inputType="textMultiLine" />
 
                 <Button
-                    android:id="@+id/add_task_button"
+                    android:id="@+id/save_task_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Next"/>
+                    android:text="Save"/>
 
             </LinearLayout>
         </ScrollView>
