--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_height="60dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:src="@drawable/ic_menu"
+                android:src="@drawable/ic_add"
                 android:scaleType="centerInside"
                 android:layout_gravity="bottom|right"
                 />
