--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="1000dp" />
-    <solid android:color="#1c3dbb" />
+    <solid android:color="@color/blueBackground" />
     <stroke
         android:width="2dip"
-        android:color="#1c3dbb" />
+        android:color="@color/blueBackground" />
     <padding
         android:bottom="4dp"
         android:left="4dp"
