--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_add"
                 android:scaleType="centerInside"
+                android:elevation="10dp"
                 android:layout_gravity="bottom|right"
                 />
         </FrameLayout>
