--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="blueBackground">#0082ff</color>
+    <color name="darkBlue">#404ca3</color>
+    <color name="white">#ffffff</color>
 </resources>
